// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xTokens transfer should be correct config 1`] = `
ExtrinsicConfig {
  "func": "transfer",
  "getArgs": [Function],
  "pallet": "xTokens",
}
`;

exports[`xTokens transfer should get correct arguments 1`] = `
[
  "USDT",
  99000000000n,
  {
    "V1": {
      "interior": {
        "X2": [
          {
            "Parachain": 1000,
          },
          {
            "AccountKey20": {
              "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
              "network": "Any",
            },
          },
        ],
      },
      "parents": 1,
    },
  },
  1000000000,
]
`;

exports[`xTokens transferMultiAsset should be correct config 1`] = `
ExtrinsicConfig {
  "func": "transferMultiAsset",
  "getArgs": [Function],
  "pallet": "xTokens",
}
`;

exports[`xTokens transferMultiAsset should get correct arguments 1`] = `
[
  {
    "V1": {
      "fun": {
        "Fungible": 99000000000n,
      },
      "id": {
        "Concrete": {
          "interior": {
            "X2": [
              {
                "Parachain": 1000,
              },
              {
                "GeneralKey": "USDT",
              },
            ],
          },
          "parents": 1,
        },
      },
    },
  },
  {
    "V1": {
      "interior": {
        "X2": [
          {
            "Parachain": 1000,
          },
          {
            "AccountKey20": {
              "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
              "network": "Any",
            },
          },
        ],
      },
      "parents": 1,
    },
  },
  1000000000,
]
`;

exports[`xTokens transferMultiCurrencies should be correct config 1`] = `
ExtrinsicConfig {
  "func": "transferMultiCurrencies",
  "getArgs": [Function],
  "pallet": "xTokens",
}
`;

exports[`xTokens transferMultiCurrencies should get correct arguments 1`] = `
[
  [
    [
      "USDT",
      99000000000n,
    ],
    [
      "RMRK",
      5000000000n,
    ],
  ],
  1,
  {
    "V1": {
      "interior": {
        "X2": [
          {
            "Parachain": 1000,
          },
          {
            "AccountKey20": {
              "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
              "network": "Any",
            },
          },
        ],
      },
      "parents": 1,
    },
  },
  1000000000,
]
`;
